--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,17 +5,18 @@
 
 @import 'base/reset';
 @import 'base/typography';
+@import 'base/layout'
 
 // @import 'vendors/bootstrap';
 // @import 'vendors/jquery-ui';
-@import 'vendors/html5boilerplate';
+// @import 'vendors/html5boilerplate';
 
 
 // @import 'layout/navigation';
 // @import 'layout/grid';
 // @import 'layout/header';
 // @import 'layout/footer';
-// @import 'layout/sidebar';gul
+// @import 'layout/sidebar';
 // @import 'layout/forms';
 
 // @import 'components/buttons';
