--- a/scss/base/layout.scss
+++ b/scss/base/layout.scss
@@ -8,6 +8,7 @@ div.console {
   width: 50%;
   height: 50%;
   overflow-x: scroll;
+  overflow-y: scroll;
   top: 25px;
   right: 25px;
   background-color: rgba(0,0,0,0.5);
